--- a/src/app/dashboard/create-new/create-new.component.html
+++ b/src/app/dashboard/create-new/create-new.component.html
@@ -1,2 +1,6 @@
 <agm-map [latitude]="lat" [longitude]="lng" [streetViewControl]="false" [zoomControl]="false" >
   </agm-map>
+
+  <div class="container" style="z-index: 1; position:absolute; top: 70px; text-align: center; background: yellow;" >
+    <h1>hello</h1>
+  </div>
