--- a/src/app/dashboard/create-new/create-new.component.css
+++ b/src/app/dashboard/create-new/create-new.component.css
@@ -1,3 +1,8 @@
 agm-map{
     height: 600px;
+    width: 100%;
+    z-index: -1;
+    pointer-events: none;
+    opacity: 0.5;
+    background: #CCC;
 }
