--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,3 @@
-<app-navbar></app-navbar>
-<router-outlet></router-outlet>
+<app-navbar style="z-index: 100000000000000;"></app-navbar>
+<router-outlet (activate)="onActivate($event)"></router-outlet>
 <app-footer></app-footer>
