--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -47,31 +47,52 @@
                                 <div class="signin-form profile">
                                     <div class="login-form">
                                         <h5>Need To <span>Transport</span>?</h5>
-                                      <p>Ut enim ad minima veniam, quis nostrum 
-                                        exerc ullam corporis nisi ut aliqui</p>
-                                      <form action="#" method="post">
-                                        <input type="text" class="email" name="name" placeholder="Name" required="">
-                                        <input type="tel" class="tel" name="tel" placeholder="Phone Number" required="">
-                                        <select class="form-control option-w3ls">
-                                            <option>Transport From</option>
-                                            <option>Albania</option>
-                                            <option>Belgium</option>
-                                            <option>Cameroon</option>
-                                            <option>Dominica</option>
-                                            <option>France</option>
-                                            <option>Jersey</option>
-                                        </select>
-                                        <select class="form-control option-w3ls">
-                                            <option>Transport To</option>
-                                            <option>Colombia</option>
-                                            <option>Indonesia</option>
-                                            <option>Japan</option>
-                                            <option>Lebanon</option>
-                                            <option>Luxembourg</option>
-                                            <option>Montserrat</option>
-                                        </select>
-                                        <input type="submit" value="Get started">  	
+                                      <p>We carefully deliver your packages.</p>
+                                      
+                                      <form [formGroup]="form" (ngSubmit)="submit(form)" style="text-align: center;">
+                                        <div class="row" style="width: 100%;">
+                                            <!--  -->
+                                            <span matPrefix style="position: relative; top: 14px; right: 10px !important;"><img src="https://www.countryflags.io/AE/shiny/32.png" alt="country" style="width: 32px; height: 32px;">&nbsp;</span>
+                                          <mat-form-field style="max-width: 300px !important;" >
+                                  
+                                            <input matInput placeholder="From" [matAutocomplete]="auto" formControlName="from"
+                                             (change)="showCities($event)" style="width: 300px !important;">
+                                            <mat-autocomplete #auto="matAutocomplete" >
+                                              <mat-option *ngFor="let state of filteredCities" [value]="state.name">
+                                                <span>{{state.name}}</span>
+                                              </mat-option>
+                                            </mat-autocomplete>
+                                          </mat-form-field>
+                                        </div>
+                                        <div class="row" style="width: 100%;">
+                                          <span matPrefix style="position: relative; top: 14px; right: 10px !important; cursor: pointer;" (click)="openCountries()" ><img src="https://www.countryflags.io/{{selectedCountry.code}}/shiny/32.png" alt="country" style="width: 32px; height: 32px;" >&nbsp;</span>
+                                          <mat-form-field style="max-width: 300px !important;">
+                                  
+                                            <input matInput placeholder="Destination" [matAutocomplete]="auto1"   formControlName="destination">
+                                            <mat-autocomplete #auto1="matAutocomplete">
+                                              <mat-option *ngFor="let state of filteredCountries " [value]="state">
+                                                <!-- <img class="example-option-img" aria-hidden [src]="state.flag" height="25"> -->
+                                                <span>{{state}}</span>
+                                              </mat-option>
+                                            </mat-autocomplete>
+                                          </mat-form-field>
+                                        </div>
+                                        <div class="row">
+                                            <mat-form-field style="position: relative; right: 30px;">
+                                  
+                                                <input matInput placeholder="Weight" type="number" min="0" formControlName="weight">
+                                              </mat-form-field>
+                                              <span style="margin-left: 5px !important;"></span>
+                                              <mat-form-field style="position: relative; left: 15px !important;">
+                                                <mat-select placeholder="How would you like it to be delivered?" formControlName="price" #price [disabled]=" form.value.price === '' " (selectionChange)="onSelect($event.value)" style="position: relative; right: -30px;">
+                                                    <mat-option *ngIf="form.value.price !== '' " value="Saver Starting at: {{form.value.price}}">Saver Starting at: {{form.value.price}}</mat-option>
+                                                    <mat-option *ngIf="form.value.price !== '' " value="Pickup Service at: {{form.value.price + pickup.charges}}">Pickup Service at: {{form.value.price + pickup.charges}}</mat-option>
+                                                    </mat-select>
+                                              </mat-form-field>
+                                        </div>
+                                        <button mat-raised-button color="accent" type="submit" [disabled]="form.invalid || form.pristine" style="width: 400px !important;" >Book Now</button>
                                       </form>
+
                                     </div>
                                     
                                   </div>
@@ -111,42 +132,53 @@
       <form [formGroup]="form" (ngSubmit)="submit(form)" style="text-align: center;">
           <div class="row" style="width: 100%;">
               <!--  -->
-              <span matPrefix style="position: relative; top: 14px; right: 10px !important;"><img src="https://www.countryflags.io/AE/shiny/32.png" alt="country">&nbsp;</span>
-            <mat-form-field style="max-width: 300px !important;" >
-    
-              <input matInput placeholder="From" [matAutocomplete]="auto" formControlName="from"
-               (change)="showCities($event)" style="width: 300px !important;">
-              <mat-autocomplete #auto="matAutocomplete" >
-                <mat-option *ngFor="let state of filteredCities" [value]="state.name">
-                  <span>{{state.name}}</span>
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
-            <span style="margin-left: 20px !important;"></span>
-            <span matPrefix style="position: relative; top: 14px; right: 10px !important;" (click)="openCountries()" style="cursor: pointer;" ><img src="https://www.countryflags.io/{{selectedCountry.code}}/shiny/32.png" alt="country">&nbsp;</span>
-            <mat-form-field style="max-width: 300px !important;">
-    
-              <input matInput placeholder="Destination" [matAutocomplete]="auto1"   formControlName="destination">
-              <mat-autocomplete #auto1="matAutocomplete">
-                <mat-option *ngFor="let state of filteredCountries " [value]="state">
-                  <!-- <img class="example-option-img" aria-hidden [src]="state.flag" height="25"> -->
-                  <span>{{state}}</span>
-                </mat-option>
-              </mat-autocomplete>
-            </mat-form-field>
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <span matPrefix style="position: relative; top: 14px; right: 10px !important;"><img src="https://www.countryflags.io/AE/shiny/32.png" alt="country">&nbsp;</span>
+                <mat-form-field style="max-width: 300px !important;" >
+        
+                  <input matInput placeholder="From" [matAutocomplete]="auto" formControlName="from"
+                   (change)="showCities($event)" style="width: 300px !important;">
+                  <mat-autocomplete #auto="matAutocomplete" >
+                    <mat-option *ngFor="let state of filteredCities" [value]="state.name">
+                      <span>{{state.name}}</span>
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
+              </div>
+              
+              <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <span matPrefix style="position: relative; top: 14px !important; right: 10px !important; cursor: pointer;" (click)="openCountries()" ><img src="https://www.countryflags.io/{{selectedCountry.code}}/shiny/32.png" alt="country">&nbsp;</span>
+                <mat-form-field style="max-width: 300px !important;">
+        
+                  <input matInput placeholder="Destination" [matAutocomplete]="auto1"   formControlName="destination">
+                  <mat-autocomplete #auto1="matAutocomplete">
+                    <mat-option *ngFor="let state of filteredCountries " [value]="state">
+                      <!-- <img class="example-option-img" aria-hidden [src]="state.flag" height="25"> -->
+                      <span>{{state}}</span>
+                    </mat-option>
+                  </mat-autocomplete>
+                </mat-form-field>
+              </div>
+            
           </div>
           <div class="row">
-              <mat-form-field style="position: relative; right: 30px;">
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <mat-form-field style="position: relative; left: 10px;">
     
-                  <input matInput placeholder="Weight" type="number" min="0" formControlName="weight">
-                </mat-form-field>
-                <span style="margin-left: 5px !important;"></span>
-                <mat-form-field style="position: relative; left: 15px !important;">
-                  <mat-select placeholder="How would you like it to be delivered?" formControlName="price" #price [disabled]=" form.value.price === '' " (selectionChange)="onSelect($event.value)" style="position: relative; right: -30px;">
-                      <mat-option *ngIf="form.value.price !== '' " value="Saver Starting at: {{form.value.price}}">Saver Starting at: {{form.value.price}}</mat-option>
-                      <mat-option *ngIf="form.value.price !== '' " value="Pickup Service at: {{form.value.price + pickup.charges}}">Pickup Service at: {{form.value.price + pickup.charges}}</mat-option>
-                      </mat-select>
-                </mat-form-field>
+                    <input matInput placeholder="Weight" type="number" min="0" formControlName="weight">
+                  </mat-form-field>
+            </div>
+            <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
+                <mat-form-field>
+                    <mat-select placeholder="How would you like it to be delivered?" formControlName="price" #price [disabled]=" form.value.price === '' " (selectionChange)="onSelect($event.value)" style="position: relative; right: -30px;">
+                        <mat-option *ngIf="form.value.price !== '' " value="Saver Starting at: {{form.value.price}}">Saver Starting at: {{form.value.price}}</mat-option>
+                        <mat-option *ngIf="form.value.price !== '' " value="Pickup Service at: {{form.value.price + pickup.charges}}">Pickup Service at: {{form.value.price + pickup.charges}}</mat-option>
+                        </mat-select>
+                  </mat-form-field>
+            </div>
+             
+                <!-- <span style="margin-left: 5px !important;"></span> -->
+               
           </div>
           <button mat-raised-button color="accent" type="submit" [disabled]="form.invalid || form.pristine" style="width: 400px !important;" >Book Now</button>
         </form>
@@ -163,7 +195,7 @@
  </div>
  <div class="col-md-6 medile_agile_its_green">
      <div class="more click">
-              <a href="#" class="hvr-shutter-in-vertical" data-toggle="modal" data-target="#myModal4">Click Here  <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
+              <a  class="hvr-shutter-in-vertical">Click Here  <i class="fa fa-long-arrow-right" aria-hidden="true"></i></a>
     </div>
  </div>
  <div class="clearfix"> </div>
