--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,16 +9,16 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-      <h1><a class="navbar-brand" routerLink="home">
+      <h1><a class="navbar-brand" routerLink="">
         <img src="./../../../assets/images/logo.png" alt="KSL Logistics" style="height: 80px; width: 100px; position: relative; top: -25px;">
       </a></h1>
 
       </div>
-       <ul class="agile_forms">
+       <!-- <ul class="agile_forms">
         <li  *ngIf="!uid"  ><a class="active" routerLink="/signin"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a> </li>
         <li *ngIf="uid"><a class="active" (click)="signout()"  ><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a> </li>
         <li *ngIf="!uid"><a routerLink="/signup" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up</a> </li>
-      </ul>
+      </ul> -->
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse navbar-right" id="bs-example-navbar-collapse-1">
         <nav class="link-effect-2" id="link-effect-2">
@@ -30,6 +30,10 @@
 
             
             <li><a routerLink ='/contact-us' class="effect-3">ContactUs</a></li>
+            <li  *ngIf="!uid"  ><a class="active" routerLink="/signin"><i class="fa fa-sign-in" aria-hidden="true"></i> Sign In</a> </li>
+            <li *ngIf="uid"><a class="small">{{user?.email}}</a></li>
+            <li *ngIf="uid"><a class="active" (click)="signout()"  style="cursor: pointer;" ><i class="fa fa-sign-out" aria-hidden="true"></i> Sign Out</a> </li>
+            <li *ngIf="!uid"><a routerLink="/signup" ><i class="fa fa-pencil-square-o" aria-hidden="true"></i> Sign Up</a> </li>
           </ul>
         </nav>
 
