--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -170,9 +170,9 @@
             </div>
             <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12">
                 <mat-form-field>
-                    <mat-select placeholder="How would you like it to be delivered?" formControlName="price" #price [disabled]=" form.value.price === '' " (selectionChange)="onSelect($event.value)">
-                        <mat-option *ngIf="form.value.price !== '' " value="Saver Starting at: {{form.value.price}}">Saver Starting at: {{form.value.price}}</mat-option>
-                        <mat-option *ngIf="form.value.price !== '' " value="Pickup Service at: {{form.value.price + pickup.charges}}">Pickup Service at: {{form.value.price + pickup.charges}}</mat-option>
+                    <mat-select placeholder="How would you like it to be delivered?" formControlName="price"  [disabled]=" !showPrice[0] " (selectionChange)="onSelect($event.value)">
+                        <mat-option *ngIf="form.value.price !== '' " value="{{showPrice[0]}}">Saver Starting at: {{showPrice[0]}}</mat-option>
+                        <mat-option *ngIf="form.value.price !== '' " value="{{showPrice[1]}}">Pickup Service at: {{showPrice[1]}}</mat-option>
                         </mat-select>
                   </mat-form-field>
             </div>
