--- a/src/app/dashboard/tracking/tracking.component.html
+++ b/src/app/dashboard/tracking/tracking.component.html
@@ -47,3 +47,24 @@
         </div>
     </div>
     </div>
+
+    <br>
+
+    <div class="services two">
+      <div class="container">
+        <div class="agile_inner_grids">	
+          <div class="col-md-6 wthree_services_grid_left">
+            <h3> Track Your <span>Order</span> </h3>
+            <h4>Why Choose Us</h4>
+            <p> Sed quis eleifend leo. Phasellus iaculis, 
+              metus facilisis gravida dapibus, ligula dolor placerat dolor, eget 
+              cursus neque risus quis tortor varius augue ut mauris condimentum dictum.</p>
+              <p> Sed quis eleifend leo. Phasellus iaculis, 
+              metus facilisis gravida dapibus, ligula dolor placerat dolor, eget 
+              cursus neque risus quis tortor varius augue ut mauris condimentum dictum.</p>
+            
+          </div>
+          <div class="clearfix"> </div>
+        </div>
+      </div>
+    </div>
