--- a/src/app/dashboard/create-dialog/create-dialog.component.html
+++ b/src/app/dashboard/create-dialog/create-dialog.component.html
@@ -301,7 +301,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    <h3>Unfortunately the we couldn't get the right price for your order. Please Contact us at <a routerLink="/contact-us">here.</a></h3>
+                    <h3>Unfortunately, we couldn't get the right price for your order. Please Contact us at <a routerLink="/contact-us">here.</a></h3>
                     <h3>Thank you.</h3>
                 </div>
             </div>
