--- a/src/app/dashboard/home/home.component.html
+++ b/src/app/dashboard/home/home.component.html
@@ -125,6 +125,8 @@
     </div>
   </div>
 </div>
+
+
 <!-- //bootstrap-pop-up -->
 <div class="inner_main_agile_section">
   <div class="container">
@@ -200,6 +202,31 @@
  </div>
  <div class="clearfix"> </div>
 </div>
+
+<br>
+
+<!-- banner-bottom -->
+<div class="banner-bottom mid-section-agileits">
+  <div class="col-md-7 bannerbottomleft">
+    <div class="video-grid-single-page-agileits">
+      <div > <img src="./assets/images/video.jpg" alt="" class="img-responsive" /> </div>
+    </div>
+  </div>
+  <div class="col-md-5 bannerbottomright">
+  <h3>How Does We Work?</h3>
+  <p>Ut enim ad minima veniam, quis nostrum 
+    exercitationem ulla corporis suscipit laboriosam, 
+    nisi ut aliquid ex ea.</p>
+  <h4><i class="fa fa-taxi" aria-hidden="true"></i>International Transport Deliver System</h4>
+  <h4><i class="fa fa-shield" aria-hidden="true"></i>Fast & Best Deliver Service</h4>
+  <h4><i class="fa fa-ticket" aria-hidden="true"></i>Standard Courier value</h4>
+  <h4><i class="fa fa-space-shuttle" aria-hidden="true"></i>Easy And Air freight Service</h4>
+  <h4><i class="fa fa-truck" aria-hidden="true"></i>Packaging & Storage</h4>
+  </div>
+  <div class="clearfix"></div>
+  </div>
+  <!-- //banner-bottom -->
+
 <!-- banner-bottom -->
 <div class="banner-bottom">
 <div class="container">
@@ -287,27 +314,7 @@
 </div>
 <!-- /blog -->
 </div>
-<!-- banner-bottom -->
-<div class="banner-bottom mid-section-agileits">
-<div class="col-md-7 bannerbottomleft">
-  <div class="video-grid-single-page-agileits">
-    <div data-video="MNsWRQ9XOxs" id="video"> <img src="./assets/images/video.jpg" alt="" class="img-responsive" /> </div>
-  </div>
-</div>
-<div class="col-md-5 bannerbottomright">
-<h3>How Does We Work?</h3>
-<p>Ut enim ad minima veniam, quis nostrum 
-  exercitationem ulla corporis suscipit laboriosam, 
-  nisi ut aliquid ex ea.</p>
-<h4><i class="fa fa-taxi" aria-hidden="true"></i>International Transport Deliver System</h4>
-<h4><i class="fa fa-shield" aria-hidden="true"></i>Fast & Best Deliver Service</h4>
-<h4><i class="fa fa-ticket" aria-hidden="true"></i>Standard Courier value</h4>
-<h4><i class="fa fa-space-shuttle" aria-hidden="true"></i>Easy And Air freight Service</h4>
-<h4><i class="fa fa-truck" aria-hidden="true"></i>Packaging & Storage</h4>
-</div>
-<div class="clearfix"></div>
-</div>
-<!-- //banner-bottom -->
+
 <div class="events">
 <ul id="flexiselDemo1">	
   <li>
