--- a/src/app/dashboard/create-dialog/create-dialog.component.html
+++ b/src/app/dashboard/create-dialog/create-dialog.component.html
@@ -159,7 +159,7 @@
   
   
       </div>
-      <div class="form3" *ngIf="showForm3">
+      <div class="form3" *ngIf="showForm3" style="width: 100% !important;">
             <div class="row">
                     <div class="col-xl-2 col-lg-2 col-md-2 col-sm-3">
                             <button mat-button (click)="back()"  ><mat-icon style="color: #A0D08E;">arrow_back</mat-icon></button>
